# swaggerui/swagger.yml
@@ -6,17 +6,38 @@ components:
       schema:
         type: string
   schemas:
-    "": {}
-    RequestHeaders:
+    Headers:
       properties:
         Authorization:
           type: string
       type: object
+    NamespaceRequest:
+      properties:
+        code:
+          type: string
+        name:
+          type: string
+      type: object
+    NamespaceResponse:
+      properties:
+        name:
+          type: string
+      type: object
+    model.NamespaceRequest:
+      properties:
+        code:
+          type: string
+        name:
+          type: string
+      type: object
+    model.NamespaceResponse:
+      properties:
+        name:
+          type: string
+      type: object
   securitySchemes:
     AuthorizationHeader:
-      description: thisisatest
-      scheme: bearer
-      type: http
+      type: APIKey
 info:
   contact:
     email: shaun@infinityservers.co.uk
@@ -32,23 +53,109 @@ openapi: 3.0.0
 paths:
   /namespace:
     get:
+      description: ' Get a list of namespaces.'
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NamespaceResponse'
+          description: The response from the kubernetes cluster
+      summary: List namespaces
+      tags:
+      - namespace
+    post:
+      description: ' Create a namespace'
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/'
+              $ref: '#/components/schemas/NamespaceRequest'
         required: true
       responses:
         "200":
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/'
+                $ref: '#/components/schemas/NamespaceResponse'
           description: The response from the kubernetes cluster
+      summary: Create namespace
+      tags:
+      - namespace
+  /namespace/{namespace}:
+    delete:
+      description: ' Delete a namespace'
+      parameters:
+      - description: The namespace name
+        in: path
+        name: namespace
+        required: true
+        schema:
+          description: The namespace name
+          format: string
+          type: string
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NamespaceResponse'
+          description: The response from the kubernetes cluster
+      summary: Delete namespace
+      tags:
+      - namespace
+    get:
+      description: ' Get a namespace'
+      parameters:
+      - description: The namespace name
+        in: path
+        name: namespace
+        required: true
+        schema:
+          description: The namespace name
+          format: string
+          type: string
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NamespaceResponse'
+          description: The response from the kubernetes cluster
+      summary: Get namespace
+      tags:
+      - namespace
+    put:
+      description: ' Update a namespace'
+      parameters:
+      - description: The namespace name
+        in: path
+        name: namespace
+        required: true
+        schema:
+          description: The namespace name
+          format: string
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NamespaceRequest'
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NamespaceResponse'
+          description: The response from the kubernetes cluster
+      summary: Update namespace
+      tags:
+      - namespace
 security:
 - AuthorizationHeader:
   - read
   - write
 servers:
-- description: ' Server-1'
-  url: https://www.fake.com
+- description: Default Server URL
+  url: /
